--- a/docs/output.css
+++ b/docs/output.css
@@ -681,6 +681,10 @@ video {
   display: grid;
 }
 
+.hidden {
+  display: none;
+}
+
 .h-64 {
   height: 16rem;
 }
@@ -782,6 +786,12 @@ video {
   margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.space-x-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1rem * var(--tw-space-x-reverse));
+  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
 .space-x-6 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(1.5rem * var(--tw-space-x-reverse));
@@ -850,11 +860,6 @@ video {
   padding: 1.5rem;
 }
 
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
@@ -868,11 +873,6 @@ video {
 .py-16 {
   padding-top: 4rem;
   padding-bottom: 4rem;
-}
-
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
 }
 
 .py-20 {
@@ -890,8 +890,16 @@ video {
   padding-bottom: 2rem;
 }
 
+.pb-40 {
+  padding-bottom: 10rem;
+}
+
 .pl-24 {
   padding-left: 6rem;
+}
+
+.pt-24 {
+  padding-top: 6rem;
 }
 
 .text-left {
@@ -1021,11 +1029,6 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.hover\:bg-primary-lightest:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(253 244 240 / var(--tw-bg-opacity, 1));
-}
-
 .hover\:text-primary-dark:hover {
   --tw-text-opacity: 1;
   color: rgb(161 124 107 / var(--tw-text-opacity, 1));
@@ -1051,6 +1054,10 @@ video {
 
   .md\:mb-24 {
     margin-bottom: 6rem;
+  }
+
+  .md\:inline {
+    display: inline;
   }
 
   .md\:hidden {
@@ -1079,6 +1086,12 @@ video {
 
   .md\:gap-16 {
     gap: 4rem;
+  }
+
+  .md\:space-x-6 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(1.5rem * var(--tw-space-x-reverse));
+    margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
   .md\:space-x-8 > :not([hidden]) ~ :not([hidden]) {
@@ -1112,8 +1125,16 @@ video {
     padding-bottom: 8rem;
   }
 
+  .md\:pb-60 {
+    padding-bottom: 15rem;
+  }
+
   .md\:pr-10 {
     padding-right: 2.5rem;
+  }
+
+  .md\:pt-40 {
+    padding-top: 10rem;
   }
 
   .md\:text-2xl {
