--- a/docs/output.css
+++ b/docs/output.css
@@ -685,8 +685,8 @@ video {
   display: none;
 }
 
-.h-64 {
-  height: 16rem;
+.h-16 {
+  height: 4rem;
 }
 
 .h-auto {
@@ -699,6 +699,10 @@ video {
 
 .min-h-\[calc\(100vh-53px\)\] {
   min-height: calc(100vh - 53px);
+}
+
+.w-16 {
+  width: 4rem;
 }
 
 .w-24 {
@@ -834,6 +838,11 @@ video {
   border-top-width: 1px;
 }
 
+.border-primary-light {
+  --tw-border-opacity: 1;
+  border-color: rgb(250 220 208 / var(--tw-border-opacity, 1));
+}
+
 .border-primary-light\/30 {
   border-color: rgb(250 220 208 / 0.3);
 }
@@ -843,8 +852,9 @@ video {
   background-color: rgb(250 220 208 / var(--tw-bg-opacity, 1));
 }
 
-.bg-primary-light\/50 {
-  background-color: rgb(250 220 208 / 0.5);
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
 .bg-white\/95 {
@@ -854,6 +864,10 @@ video {
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.p-4 {
+  padding: 1rem;
 }
 
 .p-6 {
@@ -875,11 +889,6 @@ video {
   padding-bottom: 4rem;
 }
 
-.py-20 {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-}
-
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -890,12 +899,24 @@ video {
   padding-bottom: 2rem;
 }
 
+.pb-12 {
+  padding-bottom: 3rem;
+}
+
+.pb-24 {
+  padding-bottom: 6rem;
+}
+
 .pb-40 {
   padding-bottom: 10rem;
 }
 
 .pl-24 {
   padding-left: 6rem;
+}
+
+.pt-20 {
+  padding-top: 5rem;
 }
 
 .pt-24 {
@@ -908,6 +929,10 @@ video {
 
 .text-center {
   text-align: center;
+}
+
+.font-serif {
+  font-family: Lora, serif;
 }
 
 .text-2xl {
@@ -993,6 +1018,10 @@ video {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.opacity-90 {
+  opacity: 0.9;
+}
+
 .backdrop-blur-sm {
   --tw-backdrop-blur: blur(4px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
@@ -1052,20 +1081,12 @@ video {
     margin-bottom: 5rem;
   }
 
-  .md\:mb-24 {
-    margin-bottom: 6rem;
-  }
-
   .md\:inline {
     display: inline;
   }
 
   .md\:hidden {
     display: none;
-  }
-
-  .md\:h-80 {
-    height: 20rem;
   }
 
   .md\:grid-cols-2 {
@@ -1120,9 +1141,12 @@ video {
     padding-bottom: 6rem;
   }
 
-  .md\:py-32 {
-    padding-top: 8rem;
-    padding-bottom: 8rem;
+  .md\:pb-28 {
+    padding-bottom: 7rem;
+  }
+
+  .md\:pb-48 {
+    padding-bottom: 12rem;
   }
 
   .md\:pb-60 {
